[gd_scene load_steps=48 format=3 uid="uid://doby2s10ygbc8"]

[ext_resource type="Material" uid="uid://d2qf4wrpo8jau" path="res://Assets/Ressources/ProcessMaterial/procedural_sky_material.tres" id="1_t7fs0"]
[ext_resource type="Texture2D" uid="uid://q07mg38k7eep" path="res://Assets/Sprites/Weapons/FireKatana.png" id="2_xvvdc"]
[ext_resource type="Texture2D" uid="uid://dr377r4jo52s8" path="res://Assets/Sprites/Textures/platform_text.png" id="3_p5coh"]
[ext_resource type="Texture2D" uid="uid://3rjr00wn07pv" path="res://Assets/Sprites/Textures/NormalMap/platform_text_n.png" id="4_iop4g"]
[ext_resource type="Texture2D" uid="uid://bknhovv5ollip" path="res://Assets/Sprites/FX/Smoke_FX3.png" id="5_3q86b"]
[ext_resource type="Texture2D" uid="uid://cb3fsi6b83dq5" path="res://Assets/Sprites/Characters/n_sprite_character_die.png" id="7_ckiwr"]
[ext_resource type="Texture2D" uid="uid://d13nq1nxkqvsh" path="res://Assets/Sprites/Characters/n_sprite_character_sit.png" id="8_c4i7j"]
[ext_resource type="Script" path="res://Assets/Scenes/end_screen.gd" id="8_mh8d7"]
[ext_resource type="FontFile" uid="uid://c3rjhfocf1qp6" path="res://Assets/Fonts/PeaberryBase.ttf" id="10_qvi62"]

[sub_resource type="Sky" id="Sky_ife24"]
sky_material = ExtResource("1_t7fs0")

[sub_resource type="Environment" id="Environment_lcxsq"]
background_mode = 2
sky = SubResource("Sky_ife24")
ambient_light_source = 3
ambient_light_sky_contribution = 0.05
ambient_light_energy = 2.97
tonemap_mode = 3
tonemap_exposure = 0.63
ssil_radius = 16.0
sdfgi_enabled = true
sdfgi_energy = 0.035
fog_light_color = Color(0.0235294, 0.0313726, 0.0392157, 1)
fog_light_energy = 0.66
volumetric_fog_enabled = true
volumetric_fog_density = 0.3308
volumetric_fog_albedo = Color(0, 0, 0, 1)
volumetric_fog_emission = Color(0.0313726, 0.164706, 0.298039, 1)
volumetric_fog_emission_energy = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ujqgp"]
transparency = 3
alpha_hash_scale = 1.0
alpha_antialiasing_mode = 0
albedo_color = Color(0.427451, 0.427451, 0.427451, 1)
albedo_texture = ExtResource("2_xvvdc")
metallic_specular = 0.0
texture_filter = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_12emu"]
albedo_color = Color(0.301961, 0.380392, 0.45098, 1)
albedo_texture = ExtResource("3_p5coh")
normal_enabled = true
normal_scale = 0.36
normal_texture = ExtResource("4_iop4g")
uv1_scale = Vector3(51.56, 34.374, 51.56)
texture_filter = 0

[sub_resource type="BoxMesh" id="BoxMesh_w3ciq"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_7o08s"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="Curve" id="Curve_i1jkw"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.483516), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_a7abv"]
curve = SubResource("Curve_i1jkw")

[sub_resource type="Gradient" id="Gradient_nxhfh"]
offsets = PackedFloat32Array(0.0408163, 0.209184, 0.433673, 0.566327)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 0.14902, 1, 0.796078, 0.45098, 0.0509804, 1, 1, 0.152941, 0.0862745, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_p8cxy"]
gradient = SubResource("Gradient_nxhfh")

[sub_resource type="Curve" id="Curve_7pgek"]
_data = [Vector2(0, 0.923077), 0.0, 1.12708, 0, 0, Vector2(0.558036, 0.43956), -1.78249, -1.78249, 0, 0, Vector2(1, 0), -0.0770122, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_ccswl"]
curve = SubResource("Curve_7pgek")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lvele"]
lifetime_randomness = 0.08
emission_shape_scale = Vector3(-11.22, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(0.004, 0, 0)
angle_max = 112.9
initial_velocity_min = -0.1
initial_velocity_max = 0.1
gravity = Vector3(0, 1, 0)
scale_curve = SubResource("CurveTexture_ccswl")
color_ramp = SubResource("GradientTexture1D_p8cxy")
alpha_curve = SubResource("CurveTexture_a7abv")
anim_speed_max = 4.47

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_27i6g"]
transparency = 1
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
albedo_texture = ExtResource("5_3q86b")
texture_filter = 0
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_8xr61"]
material = SubResource("StandardMaterial3D_27i6g")
size = Vector2(0.2, 0.2)

[sub_resource type="Animation" id="Animation_6e51f"]
resource_name = "title_anim"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.9667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.1, 0.05]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5bs2e"]
_data = {
"title_anim": SubResource("Animation_6e51f")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_xudv7"]
atlas = ExtResource("8_c4i7j")
region = Rect2(0, 0, 12, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl5sm"]
atlas = ExtResource("8_c4i7j")
region = Rect2(12, 0, 12, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qmke"]
atlas = ExtResource("8_c4i7j")
region = Rect2(24, 0, 12, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_gi4ii"]
atlas = ExtResource("8_c4i7j")
region = Rect2(36, 0, 12, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7ogm"]
atlas = ExtResource("8_c4i7j")
region = Rect2(48, 0, 12, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0mkb"]
atlas = ExtResource("8_c4i7j")
region = Rect2(60, 0, 12, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qthp"]
atlas = ExtResource("8_c4i7j")
region = Rect2(72, 0, 12, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1xsn"]
atlas = ExtResource("8_c4i7j")
region = Rect2(84, 0, 12, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tvu2"]
atlas = ExtResource("7_ckiwr")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_mj1yv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xudv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl5sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qmke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gi4ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7ogm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0mkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qthp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1xsn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tvu2")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mgdqi"]
bg_color = Color(1, 1, 1, 0)
border_width_bottom = 5
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2ynqy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5k8bh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4tvgd"]
bg_color = Color(1, 1, 1, 0)
border_width_bottom = 6
border_color = Color(1, 0.568627, 0.454902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r0w5o"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2b2b7"]

[sub_resource type="LabelSettings" id="LabelSettings_3simi"]
font = ExtResource("10_qvi62")
font_size = 40

[sub_resource type="Animation" id="Animation_p3kwh"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_efmug"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mk46f"]
_data = {
"fade_in": SubResource("Animation_p3kwh"),
"fade_out": SubResource("Animation_efmug")
}

[sub_resource type="LabelSettings" id="LabelSettings_13pks"]
font = ExtResource("10_qvi62")
font_size = 86
outline_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(19.685, 4.015)

[node name="TittleScreen" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.759272, 0.650774, 0, -0.650774, 0.759272, -0.106, 0.775, 0.42)
near = 0.008

[node name="Scene" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.14, 0, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="Scene"]
environment = SubResource("Environment_lcxsq")

[node name="Sprite3D" type="Sprite3D" parent="Scene"]
transform = Transform3D(-0.312335, 0.949972, 0, -0.8227, -0.27049, 0.5, 0.474986, 0.156167, 0.866025, 0.02, 0.118, -0.190891)
visible = false
material_override = SubResource("StandardMaterial3D_ujqgp")
pixel_size = 0.003
alpha_cut = 2
texture_filter = 0
texture = ExtResource("2_xvvdc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Scene"]
transform = Transform3D(9, 0, 0, 0, 0.314, 0, 0, 0, 9, 0, -0.108312, 0)
material_override = SubResource("StandardMaterial3D_12emu")
mesh = SubResource("BoxMesh_w3ciq")
skeleton = NodePath("../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Scene/MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Scene/MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_7o08s")

[node name="GPUParticlesCollisionBox3D" type="GPUParticlesCollisionBox3D" parent="Scene/MeshInstance3D/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.999998, 0.00741577, -0.451284, -0.0105896)
size = Vector3(0.975647, 2, 0.991638)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Scene"]
transform = Transform3D(-0.687415, 0.539197, -0.486546, 0.0625, 0.711363, 0.70004, 0.723571, 0.450809, -0.522701, 0, 2.2756, 0)
light_energy = 0.0
shadow_blur = 0.0
sky_mode = 1

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="Scene"]
transform = Transform3D(-0.866026, -0.25, 0.433012, -2.18557e-08, 0.866025, 0.5, -0.5, 0.433013, -0.75, 4, 0, 0)
light_energy = 0.0
sky_mode = 2

[node name="OmniLight3D" type="OmniLight3D" parent="Scene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.228, 0.23, -0.283)
light_color = Color(0.660993, 0.989962, 0.859803, 1)
light_energy = 0.0717952
light_indirect_energy = 3.305
light_specular = 3.076
shadow_bias = 0.0
shadow_normal_bias = 10.0
shadow_opacity = 0.4
shadow_blur = 10.0
omni_range = 6.875
omni_attenuation = 1.68179

[node name="GPUParticles3D" type="GPUParticles3D" parent="Scene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.058, -0.159012)
visible = false
amount = 10
lifetime = 0.95
process_material = SubResource("ParticleProcessMaterial_lvele")
draw_pass_1 = SubResource("QuadMesh_8xr61")

[node name="OmniLight3D2" type="OmniLight3D" parent="Scene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.295275, 0.18, -0.186848)
visible = false
light_color = Color(1, 0.407843, 0.32549, 1)
light_energy = 0.998653
light_specular = 1.814
shadow_enabled = true
shadow_bias = 0.0
shadow_blur = 2.271
omni_range = 1.282

[node name="AnimationTree" type="AnimationPlayer" parent="Scene"]
root_node = NodePath("../OmniLight3D")
libraries = {
"": SubResource("AnimationLibrary_5bs2e")
}
autoplay = "title_anim"

[node name="Visual" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.14, 0, -0.211012)

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="Visual"]
transform = Transform3D(2.5, 0, 0, 0, 2.16506, 1.25, 0, -1.25, 2.16506, -0.237951, 0.109161, -0.055857)
pixel_size = 0.004
shaded = true
alpha_cut = 2
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_mj1yv")
animation = &"die"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("8_mh8d7")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -99.0
offset_top = -127.0
offset_right = 99.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 15

[node name="ButtonRestart" type="Button" parent="CanvasLayer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
focus_next = NodePath("../ButtonMainMenu")
theme_override_fonts/font = ExtResource("10_qvi62")
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = SubResource("StyleBoxFlat_mgdqi")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_2ynqy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5k8bh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4tvgd")
theme_override_styles/normal = SubResource("StyleBoxFlat_r0w5o")
text = "RESTART
"

[node name="ButtonMainMenu" type="Button" parent="CanvasLayer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("10_qvi62")
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = SubResource("StyleBoxFlat_mgdqi")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_2ynqy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5k8bh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2b2b7")
theme_override_styles/normal = SubResource("StyleBoxFlat_r0w5o")
text = "MAIN MENU
"

[node name="Score" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.0
offset_top = -362.0
offset_right = 156.0
offset_bottom = -255.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="ActualScore" type="Label" parent="CanvasLayer/Score"]
layout_mode = 2
text = "Your score     00
"
label_settings = SubResource("LabelSettings_3simi")

[node name="BestScore" type="Label" parent="CanvasLayer/Score"]
layout_mode = 2
text = "Best score     00
"
label_settings = SubResource("LabelSettings_3simi")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_mk46f")
}
autoplay = "fade_out"

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -358.0
offset_top = 64.0
offset_right = 358.0
offset_bottom = 200.0
grow_horizontal = 2
size_flags_vertical = 0
text = "GAME OVER"
label_settings = SubResource("LabelSettings_13pks")
horizontal_alignment = 1
